styles.css
/* Styles Sheet */

body {
    margin: auto;
    font-family: sans-serif;
    margin: auto;
    display: flex;
    flex-direction: column;
    align-content: center;
}

/* Header styling */

.header {
    background-color: #1f2937;
    display: flex;
    align-items: center;
    padding: 0px 150px;
}

.header-logo {
    font-size: 24px;
    display: flex;
    flex: 1;
    color: #f9faf8;
    font-weight: 900;
}

.header-links {
    gap: 16px;
    display: flex;
    flex: 1;
    list-style-type: none;
    font-size: 18px;
    justify-content: flex-end;
    flex-wrap: wrap;
}

a:link, a:hover, a:visited, a:active {
    color: #e5e7eb;
    text-decoration: none;
}

/* Hero-1 styling */

.hero-1 {
    gap: 64px;
    background-color: #1f2937;
    display: flex;
    padding: 100px 150px;
    flex-wrap: wrap;
}

/* Image */

.hero-1-image {
    display: flex;
    flex: 1;
    background-color: #aaaaaa;
    height: 230px;   
    align-items: center;
    justify-content: center;
    color: #f9faf8;
    text-align: center;
}

/* Left text */

.left-text {
    gap: 8px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex: 1;
}

.lft-text-hdr {
    font-size: 48px;
    font-weight: 800;
    color: #f9faf8;
}

.lft-text-body {
    font-size: 18px;
    color: #e5e7eb;
}

/* Hero-1 button "Sign up" */

.hero-1-button {
    border-radius: 8px;
    border-style: none;
    background-color: #3882f6;
    padding: 8px 32px;
    color: #e5e7eb;
    font-size: 18px;
}

/* Hero-2 styling */

/* Hero-2 header */

.hero-2-header {
    display: flex;
    flex: 1;
    justify-content: center;
    padding: 50px 150px;
    font-size: 36px;
    font-weight: 800;
    text-align: center;
}

/* Hero-2 text / images */

.hero-2-body {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 52px;
    padding: 0px 150px;
    flex-wrap: wrap;
    padding-bottom: 100px;
    color: #6d6d6d;

}

/* img place holder */

.hero-2-button {
    border-style: solid;
    border-width: 4px;
    margin-bottom: 8px;
    border-radius: 8px;
    border-color: #3882f6;
    padding: 60px 60px;
    background-color: rgba(170, 170, 170, 0.37);
}

.img-box {
    max-width: 150px;
}

/* Quote section styling */

.quote-hero {
    padding: 100px 200px;
    display: flex;
    flex-direction: column;
    background-color: #e5e7eb;
}

.quote-text {
    display: flex;
    font-size: 36px;
    font-style: italic;
    color: #6d6d6d;
}

.quote-author {
    display: flex;
    padding-top: 10px;
    font-weight: 800;
    justify-content: flex-end;
    color: #1f2937;
    text-align: center;
    padding-right: 40px;
}

/* CTA section styling */

.cta {
    flex: 1;
    display: flex;
    align-self: center;
    justify-content: center;
    margin: 70px 200px;
    background-color: #3882f6;
    border-radius: 8px;
    flex-wrap: wrap;
}

.cta-header {
    font-weight: 800;
}

.cta-body {
    padding: 20px 60px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 5px;
    color: #f9faf8;
}

.cta-button {
    background-color: #3882f6;
    border-style: solid;
    border-color: white;
    margin: 50px;
    padding: 5px 25px;
    border-radius: 8px;
    color: #f9faf8;
}

